--- a/rust/rust.html
+++ b/rust/rust.html
@@ -189,16 +189,16 @@
 <h3 id="我的-rustlings-521-版本解决方案"><a class="header" href="#我的-rustlings-521-版本解决方案">我的 rustlings 5.2.1 版本解决方案</a></h3>
 <p><a href="https://github.com/M4n5ter/rustlings-solutions">rustlings 5.2.1 解决方案</a></p>
 <h2 id="我的-rust-相关-vscode-拓展以及配置"><a class="header" href="#我的-rust-相关-vscode-拓展以及配置">我的 rust 相关 vscode 拓展以及配置</a></h2>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/rust_extention1.png?raw=true" alt="" /></p>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/rust_extention2.png?raw=true" alt="" /></p>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/rust_extention3.png?raw=true" alt="" /></p>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/rust_extention4.png?raw=true" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/rust_extention1.png" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/rust_extention2.png" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/rust_extention3.png" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/rust_extention4.png" alt="" /></p>
 <p>以及一些设置:</p>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_1.png?raw=true" alt="" /></p>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_2.png?raw=true" alt="" /></p>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_3.png?raw=true" alt="" /></p>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_4.png?raw=true" alt="" /></p>
-<p><img src="https://github.com/m4n5ter/m4n5ter.github.io/blob/main/assets/settings_5.png?raw=true" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/settings_1.png" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/settings_2.png" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/settings_3.png" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/settings_4.png" alt="" /></p>
+<p><img src="https://raw.githubusercontent.com/m4n5ter/m4n5ter.github.io/main/assets/settings_5.png" alt="" /></p>
 
                     <!-- 暂时关闭评论 -->
                     <!--<div id="giscus-container"></div>-->
