--- a/issues/gitea/gitea_issues.html
+++ b/issues/gitea/gitea_issues.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="zh-CN" class="sidebar-visible no-js light">
+<html lang="zh-CN" class="light" dir="ltr">
 
 <head>
     <!-- Book generated using mdBook -->
@@ -9,10 +9,9 @@
 
     <!-- Custom HTML head -->
     
-    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff">
 
     <link rel="shortcut icon" href="../../favicon.png">
     <link rel="stylesheet" href="../../css/variables.css">
@@ -32,24 +31,26 @@
     <!-- Custom theme stylesheets -->
     <link rel="stylesheet" href="../../theme/style3.css">
 
-
 </head>
 
-<body>
+<body class="sidebar-visible no-js">
+    <div id="body-container"></div>
     <!-- Provide site root to javascript -->
-    <script type="text/javascript">
+    <script>
         var path_to_root = "../../";
         var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
     </script>
 
     <!-- Work around some values being stored in localStorage wrapped in quotes -->
-    <script type="text/javascript">
+    <script>
         try {
             var theme = localStorage.getItem('mdbook-theme');
             var sidebar = localStorage.getItem('mdbook-sidebar');
+
             if (theme.startsWith('"') && theme.endsWith('"')) {
                 localStorage.setItem('mdbook-theme', theme.slice(1, theme.length - 1));
             }
+
             if (sidebar.startsWith('"') && sidebar.endsWith('"')) {
                 localStorage.setItem('mdbook-sidebar', sidebar.slice(1, sidebar.length - 1));
             }
@@ -57,57 +58,86 @@
     </script>
 
     <!-- Set the theme before any content is loaded, prevents flash -->
-    <script type="text/javascript">
+    <script>
         var theme;
         try { theme = localStorage.getItem('mdbook-theme'); } catch (e) { }
         if (theme === null || theme === undefined) { theme = default_theme; }
         var html = document.querySelector('html');
-        html.classList.remove('no-js')
         html.classList.remove('light')
         html.classList.add(theme);
-        html.classList.add('js');
+        var body = document.querySelector('body');
+        body.classList.remove('no-js')
+        body.classList.add('js');
     </script>
 
+    <input type="checkbox" id="sidebar-toggle-anchor" class="hidden">
     <!-- Hide / unhide sidebar before it is displayed -->
-    <script type="text/javascript">
-        var html = document.querySelector('html');
-        var sidebar = 'hidden';
+    <script>
+        var body = document.querySelector('body');
+        var sidebar = null;
+        var sidebar_toggle = document.getElementById("sidebar-toggle-anchor");
         if (document.body.clientWidth >= 1080) {
             try { sidebar = localStorage.getItem('mdbook-sidebar'); } catch (e) { }
             sidebar = sidebar || 'visible';
+        } else {
+            sidebar = 'hidden';
         }
-        html.classList.remove('sidebar-visible');
-        html.classList.add("sidebar-" + sidebar);
+        sidebar_toggle.checked = sidebar === 'visible';
+        body.classList.remove('sidebar-visible');
+        body.classList.add("sidebar-" + sidebar);
     </script>
 
     <nav id="sidebar" class="sidebar" aria-label="Table of contents">
         <div class="sidebar-scrollbox">
             <ol class="chapter"><li class="chapter-item expanded "><a href="../../intro/intro.html"><strong aria-hidden="true">1.</strong> Intro</a></li><li class="chapter-item expanded "><a href="../../go/go.html"><strong aria-hidden="true">2.</strong> GO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../go/gin_zo.html"><strong aria-hidden="true">2.1.</strong> Gin + ZincObserve</a></li><li class="chapter-item "><a href="../../go/pstash.html"><strong aria-hidden="true">2.2.</strong> pstash(My Project)</a></li></ol></li><li class="chapter-item expanded "><a href="../../rust/rust.html"><strong aria-hidden="true">3.</strong> RUST</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/tower/rust_tower.html"><strong aria-hidden="true">3.1.</strong> Tower</a></li><li class="chapter-item "><a href="../../rust/mini-redis/mini-redis.html"><strong aria-hidden="true">3.2.</strong> mini-redis</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/mini-redis/hello_tokio.html"><strong aria-hidden="true">3.2.1.</strong> Hello Tokio</a></li><li class="chapter-item "><a href="../../rust/mini-redis/spawning.html"><strong aria-hidden="true">3.2.2.</strong> Spawning</a></li><li class="chapter-item "><a href="../../rust/mini-redis/shared_state.html"><strong aria-hidden="true">3.2.3.</strong> Shared state</a></li><li class="chapter-item "><a href="../../rust/mini-redis/channels.html"><strong aria-hidden="true">3.2.4.</strong> Channels</a></li><li class="chapter-item "><a href="../../rust/mini-redis/io.html"><strong aria-hidden="true">3.2.5.</strong> I/O</a></li><li class="chapter-item "><a href="../../rust/mini-redis/framing.html"><strong aria-hidden="true">3.2.6.</strong> Framing</a></li><li class="chapter-item "><a href="../../rust/mini-redis/async_in_depth.html"><strong aria-hidden="true">3.2.7.</strong> Async in depth</a></li><li class="chapter-item "><a href="../../rust/mini-redis/select.html"><strong aria-hidden="true">3.2.8.</strong> Select</a></li><li class="chapter-item "><a href="../../rust/mini-redis/streams.html"><strong aria-hidden="true">3.2.9.</strong> Streams</a></li></ol></li><li class="chapter-item "><a href="../../rust/tokio/tokio.html"><strong aria-hidden="true">3.3.</strong> Tokio</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/tokio/topics.html"><strong aria-hidden="true">3.3.1.</strong> Topics TODO</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../rust/tokio/bridging_with_sync_code.html"><strong aria-hidden="true">3.3.1.1.</strong> Bridging with sync code TODO</a></li><li class="chapter-item "><a href="../../rust/tokio/graceful_shutdown.html"><strong aria-hidden="true">3.3.1.2.</strong> Graceful Shutdown TODO</a></li><li class="chapter-item "><a href="../../rust/tokio/getting_started_with_tracing.html"><strong aria-hidden="true">3.3.1.3.</strong> Getting started with Tracing TODO</a></li><li class="chapter-item "><a href="../../rust/tokio/next_steps_with_tracing.html"><strong aria-hidden="true">3.3.1.4.</strong> Next steps with Tracing TODO</a></li></ol></li></ol></li></ol></li><li class="chapter-item expanded "><a href="../../other-categories/other-categories.html"><strong aria-hidden="true">4.</strong> Other categories</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../other-categories/archlinux/archlinux.html"><strong aria-hidden="true">4.1.</strong> archlinux</a></li><li class="chapter-item "><a href="../../other-categories/algorithm/algorithm.html"><strong aria-hidden="true">4.2.</strong> algorithm</a></li><li class="chapter-item "><a href="../../other-categories/nc/nc.html"><strong aria-hidden="true">4.3.</strong> nmap-netcat(nc)</a></li><li class="chapter-item "><a href="../../other-categories/mkcert/mkcert.html"><strong aria-hidden="true">4.4.</strong> mkcert</a></li><li class="chapter-item "><a href="../../other-categories/aria2/aria2.html"><strong aria-hidden="true">4.5.</strong> aria2</a></li><li class="chapter-item "><a href="../../other-categories/postgres/postgres.html"><strong aria-hidden="true">4.6.</strong> postgres</a></li><li class="chapter-item "><a href="../../other-categories/pre-commit/pre-commit.html"><strong aria-hidden="true">4.7.</strong> pre-commit</a></li><li class="chapter-item "><a href="../../other-categories/minio/minio.html"><strong aria-hidden="true">4.8.</strong> minio</a></li><li class="chapter-item "><a href="../../other-categories/git/git.html"><strong aria-hidden="true">4.9.</strong> git</a></li><li class="chapter-item "><a href="../../other-categories/croc/croc.html"><strong aria-hidden="true">4.10.</strong> croc</a></li><li class="chapter-item "><a href="../../other-categories/reality/reality.html"><strong aria-hidden="true">4.11.</strong> REALITY</a></li></ol></li><li class="chapter-item expanded "><a href="../../blockchain/blockchain.html"><strong aria-hidden="true">5.</strong> Blockchain</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../blockchain/fundamentals.html"><strong aria-hidden="true">5.1.</strong> fundamentals</a></li><li class="chapter-item "><a href="../../blockchain/substrate/substrate.html"><strong aria-hidden="true">5.2.</strong> substrate TODO</a></li></ol></li><li class="chapter-item expanded "><a href="../../issues/issues.html"><strong aria-hidden="true">6.</strong> issues and solutions</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../../isuues/linux/linux_issues.html"><strong aria-hidden="true">6.1.</strong> linux</a></li><li class="chapter-item "><a href="../../issues/docker/docker_issues.html"><strong aria-hidden="true">6.2.</strong> docker</a></li><li class="chapter-item "><a href="../../issues/mysql/mysql_issues.html"><strong aria-hidden="true">6.3.</strong> mysql</a></li><li class="chapter-item expanded "><a href="../../issues/gitea/gitea_issues.html" class="active"><strong aria-hidden="true">6.4.</strong> gitea</a></li><li class="chapter-item "><a href="../../issues/nginx/nginx_issues.html"><strong aria-hidden="true">6.5.</strong> nginx</a></li></ol></li><li class="chapter-item expanded "><a href="../../links/links.html"><strong aria-hidden="true">7.</strong> Links</a></li></ol>
         </div>
-        <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+        <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+            <div class="sidebar-resize-indicator"></div>
+        </div>
     </nav>
+
+    <!-- Track and set sidebar scroll position -->
+    <script>
+        var sidebarScrollbox = document.querySelector('#sidebar .sidebar-scrollbox');
+        sidebarScrollbox.addEventListener('click', function (e) {
+            if (e.target.tagName === 'A') {
+                sessionStorage.setItem('sidebar-scroll', sidebarScrollbox.scrollTop);
+            }
+        }, { passive: true });
+        var sidebarScrollTop = sessionStorage.getItem('sidebar-scroll');
+        sessionStorage.removeItem('sidebar-scroll');
+        if (sidebarScrollTop) {
+            // preserve sidebar scroll position when navigating via links within sidebar
+            sidebarScrollbox.scrollTop = sidebarScrollTop;
+        } else {
+            // scroll sidebar to current active section when navigating via "next/previous chapter" buttons
+            var activeSection = document.querySelector('#sidebar .active');
+            if (activeSection) {
+                activeSection.scrollIntoView({ block: 'center' });
+            }
+        }
+    </script>
 
     <div id="page-wrapper" class="page-wrapper">
 
         <div class="page">
                         <div id="menu-bar-hover-placeholder"></div>
-            <div id="menu-bar" class="menu-bar sticky bordered">
+            <div id="menu-bar" class="menu-bar sticky">
                 <div class="left-buttons">
-                    <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents"
-                        aria-label="Toggle Table of Contents" aria-controls="sidebar">
+                    <label id="sidebar-toggle" class="icon-button" for="sidebar-toggle-anchor"
+                        title="Toggle Table of Contents" aria-label="Toggle Table of Contents" aria-controls="sidebar">
                         <i class="fa fa-bars"></i>
-                    </button>
+                    </label>
                     <button id="theme-toggle" class="icon-button" type="button" title="Change theme"
                         aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
                         <i class="fa fa-paint-brush"></i>
                     </button>
                     <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
-                        <li role="none"><button role="menuitem" class="theme" id="light">Light (default)</button></li>
+                        <li role="none"><button role="menuitem" class="theme" id="light">Light</button></li>
                         <li role="none"><button role="menuitem" class="theme" id="rust">Rust</button></li>
                         <li role="none"><button role="menuitem" class="theme" id="coal">Coal</button></li>
                         <li role="none"><button role="menuitem" class="theme" id="navy">Navy</button></li>
-                        <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button>
-                        </li>
+                        <li role="none"><button role="menuitem" class="theme" id="ayu">Ayu</button></li>
                     </ul>
                     <button id="search-toggle" class="icon-button" type="button" title="Search. (Shortkey: s)"
                         aria-label="Toggle Searchbar" aria-expanded="false" aria-keyshortcuts="S"
@@ -145,34 +175,12 @@
             </div>
 
             <!-- Apply ARIA attributes after the sidebar and the sidebar toggle button are added to the DOM -->
-            <script type="text/javascript">
+            <script>
                 document.getElementById('sidebar-toggle').setAttribute('aria-expanded', sidebar === 'visible');
                 document.getElementById('sidebar').setAttribute('aria-hidden', sidebar !== 'visible');
-
-                // Get viewed page store
-                var viewed_key = 'mdbook-viewed';
-                var viewed_map = {};
-                try {
-                    var viewed_storage = localStorage.getItem(viewed_key);
-                    if (viewed_storage) {
-                        viewed_map = JSON.parse(viewed_storage)
-                    }
-                } catch (e) { }
-
                 Array.from(document.querySelectorAll('#sidebar a')).forEach(function (link) {
                     link.setAttribute('tabIndex', sidebar === 'visible' ? 0 : -1);
-
-                    // Apply viewed style
-                    if (viewed_map[link.pathname]) {
-                        link.classList.add('md-viewed')
-                    }
                 });
-
-                // Mark viewed after 30s
-                setTimeout(function () {
-                    viewed_map[location.pathname] = 1;
-                    localStorage.setItem(viewed_key, JSON.stringify(viewed_map));
-                }, 30000)
             </script>
 
             <div id="content" class="content">
@@ -196,7 +204,7 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../../issues/nginx/nginx_issues.html" class="mobile-nav-chapters next"
+                    <a rel="next prefetch" href="../../issues/nginx/nginx_issues.html" class="mobile-nav-chapters next"
                         title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
@@ -212,7 +220,7 @@
                 <i class="fa fa-angle-left"></i>
             </a>
 
-            <a rel="next" href="../../issues/nginx/nginx_issues.html" class="nav-chapters next" title="Next chapter"
+            <a rel="next prefetch" href="../../issues/nginx/nginx_issues.html" class="nav-chapters next" title="Next chapter"
                 aria-label="Next chapter" aria-keyshortcuts="Right">
                 <i class="fa fa-angle-right"></i>
             </a>
@@ -223,26 +231,27 @@
 
 
 
-    <script type="text/javascript">
+    <script>
         window.playground_copyable = true;
     </script>
 
 
-    <script src="../../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../mark.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../searcher.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../elasticlunr.min.js"></script>
+    <script src="../../mark.min.js"></script>
+    <script src="../../searcher.js"></script>
 
-    <script src="../../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../highlight.js" type="text/javascript" charset="utf-8"></script>
-    <script src="../../book.js" type="text/javascript" charset="utf-8"></script>
+    <script src="../../clipboard.min.js"></script>
+    <script src="../../highlight.js"></script>
+    <script src="../../book.js"></script>
+
     <script type="text/javascript" charset="utf-8">
         var pagePath = "issues/gitea/gitea_issues.md"
     </script>
 
 
     <!-- Custom JS scripts -->
-    <script type="text/javascript" src="../../assets/custom.js"></script>
-    <script type="text/javascript" src="../../assets/bigPicture.js"></script>
+    <script src="../../assets/custom.js"></script>
+    <script src="../../assets/bigPicture.js"></script>
 
 
 </body>
